<resources>
    <string name="app_name">绿色长城</string>
    <string name="Info">绿色长城</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homepage">首页</string>
    <string name="shop">购物车</string>
    <string name="store">店铺</string>
    <string name="classify">分类</string>
    <string name="mine">个人</string>
    <string name="search">搜索心仪商品</string>
</resources>
